added /jobs/:id route - this works. Attempted patch - still working on this. Attempted to create a get route for different status' but this is not working the way it should yet.
